fix image on mobile

--- a/sass/_report.scss
+++ b/sass/_report.scss
@@ -71,6 +71,7 @@
         padding: 0 20px;
         .b-main-image {
             width: 900px;
+            max-width: 90vw;
         }
 
         li {
